# involute

./: .gitignore  CMakeLists.txt  README.md  dir_struct.txt  library.h
cmake/: involute-config.cmake.in
docs/: advanced_setup.md  benchmarks.md  lib_docs.md
docs/analysis/results/: analysis.py  benchmark.md  generate_benchmark.py  name_update.py  visualize_dimension_runs.py
docs/analysis/results/ackley_results_adam/: d=10_type=Aggressive_run=0.solver.csv  d=10_type=Aggressive_run=1.solver.csv  d=10_type=Aggressive_run=10.solver.csv  d=10_type=Aggressive_run=11.solver.csv  d=10_type=Aggressive_run=12.solver.csv  d=10_type=Aggressive_run=13.solver.csv  d=10_type=Aggressive_run=14.solver.csv  d=10_type=Aggressive_run=15.solver.csv  d=10_type=Aggressive_run=16.solver.csv  d=10_type=Aggressive_run=17.solver.csv  d=10_type=Aggressive_run=18.solver.csv  d=10_type=Aggressive_run=19.solver.csv  d=10_type=Aggressive_run=2.solver.csv  d=10_type=Aggressive_run=20.solver.csv  d=10_type=Aggressive_run=21.solver.csv  d=10_type=Aggressive_run=22.solver.csv  d=10_type=Aggressive_run=23.solver.csv  d=10_type=Aggressive_run=24.solver.csv  d=10_type=Aggressive_run=25.solver.csv  d=10_type=Aggressive_run=26.solver.csv  d=10_type=Aggressive_run=27.solver.csv  d=10_type=Aggressive_run=28.solver.csv  d=10_type=Aggressive_run=29.solver.csv  d=10_type=Aggressive_run=3.solver.csv  d=10_type=Aggressive_run=30.solver.csv  d=10_type=Aggressive_run=31.solver.csv  d=10_type=Aggressive_run=32.solver.csv  d=10_type=Aggressive_run=33.solver.csv  d=10_type=Aggressive_run=34.solver.csv  d=10_type=Aggressive_run=35.solver.csv  d=10_type=Aggressive_run=36.solver.csv  d=10_type=Aggressive_run=37.solver.csv  d=10_type=Aggressive_run=38.solver.csv  d=10_type=Aggressive_run=39.solver.csv  d=10_type=Aggressive_run=4.solver.csv  d=10_type=Aggressive_run=40.solver.csv  d=10_type=Aggressive_run=41.solver.csv  d=10_type=Aggressive_run=42.solver.csv  d=10_type=Aggressive_run=43.solver.csv  d=10_type=Aggressive_run=44.solver.csv  (+588 more)
docs/analysis/results/ackley_results_standard_adapter/: d=10_type=ExtraSafe_run=0.solver.csv  d=10_type=ExtraSafe_run=1.solver.csv  d=10_type=ExtraSafe_run=10.solver.csv  d=10_type=ExtraSafe_run=11.solver.csv  d=10_type=ExtraSafe_run=12.solver.csv  d=10_type=ExtraSafe_run=13.solver.csv  d=10_type=ExtraSafe_run=14.solver.csv  d=10_type=ExtraSafe_run=15.solver.csv  d=10_type=ExtraSafe_run=16.solver.csv  d=10_type=ExtraSafe_run=17.solver.csv  d=10_type=ExtraSafe_run=18.solver.csv  d=10_type=ExtraSafe_run=19.solver.csv  d=10_type=ExtraSafe_run=2.solver.csv  d=10_type=ExtraSafe_run=20.solver.csv  d=10_type=ExtraSafe_run=21.solver.csv  d=10_type=ExtraSafe_run=22.solver.csv  d=10_type=ExtraSafe_run=23.solver.csv  d=10_type=ExtraSafe_run=24.solver.csv  d=10_type=ExtraSafe_run=25.solver.csv  d=10_type=ExtraSafe_run=26.solver.csv  d=10_type=ExtraSafe_run=27.solver.csv  d=10_type=ExtraSafe_run=28.solver.csv  d=10_type=ExtraSafe_run=29.solver.csv  d=10_type=ExtraSafe_run=3.solver.csv  d=10_type=ExtraSafe_run=30.solver.csv  d=10_type=ExtraSafe_run=31.solver.csv  d=10_type=ExtraSafe_run=32.solver.csv  d=10_type=ExtraSafe_run=33.solver.csv  d=10_type=ExtraSafe_run=34.solver.csv  d=10_type=ExtraSafe_run=35.solver.csv  d=10_type=ExtraSafe_run=36.solver.csv  d=10_type=ExtraSafe_run=37.solver.csv  d=10_type=ExtraSafe_run=38.solver.csv  d=10_type=ExtraSafe_run=39.solver.csv  d=10_type=ExtraSafe_run=4.solver.csv  d=10_type=ExtraSafe_run=40.solver.csv  d=10_type=ExtraSafe_run=41.solver.csv  d=10_type=ExtraSafe_run=42.solver.csv  (+337 more)
docs/lib_docs/: math.md
docs/theory/: Note on Law of Motion Discretisation.md  Plan.Section 2.md  Section 2.1 - Further notes.md  Section 2.1-Extra.md  Section 2.3.md  Section 2.General.md
docs/theory/Section 2.General/: critical_alpha_calc.py  offline.2.py  offline.4.py  offline.5.py  offline.6.py  offline.py  viz.2.py  viz.3.py  viz.analytic.4.py
include/involute/core/: base_solver.hpp  hyper_parameters.hpp  math.hpp  objective.hpp  parameter_adapter.hpp  result.hpp  tensor.hpp
include/involute/solvers/: adam_parameter_adapter.hpp  so_parameter_adapter.hpp  so_solver.hpp
src/core/: base_solver.cpp  objective.cpp
src/solvers/adapters/: adam_parameter_adapter.cpp  cma_es_parameter_adapter.cpp  so_adam_parameter_adapter.cpp
src/solvers/anisotropic/: so_anisotropic_solver_adam.cpp  so_anisotropic_solver_cmaes.cpp  so_anisotropic_solver_cmaes_spatial.cpp
src/solvers/isotropic/: product_isotropic_solver.cpp  product_isotropic_solver_adam.cpp  product_isotropic_solver_cmaes.cpp  so_isotropic_solver.cpp  so_isotropic_solver_adam.cpp  so_isotropic_solver_cmaes.cpp  stiefel_isotropic_solver.cpp  stiefel_isotropic_solver_adam.cpp  stiefel_isotropic_solver_cmaes.cpp
tests/: CMakeLists.txt
tests/functional/: helper.cpp  test_ackley_grid.cpp  test_schwefel_so_solver.cpp  test_so_blackbox_field.cpp  test_so_hand_eye.cpp  test_so_solver.cpp  test_so_solver_2.cpp  test_so_solver_k_times.cpp  test_so_twin_basins.cpp
tests/functional/product/ackley/: test_product_coupled_so.cpp  test_product_so3_so2_so2.cpp  test_product_v63_so3.cpp
tests/functional/product/applications/: test_product_humanoid_locomotion.cpp  test_product_robotics_rastrigin.cpp  test_product_trajectory_rollout.cpp  test_product_trajectory_rollout_randomised.cpp
tests/functional/single/functions/: so_objectives.hpp  stiefel_objectives.hpp
tests/functional/single/so/ackley/: test_so_anisotropic_cmaes_ackley.cpp  test_so_isotropic_cbo_ackley.cpp
tests/functional/single/so/applications/: test_so_blackbox_field.cpp  test_so_hand_eye.cpp  test_so_twin_basins.cpp
tests/functional/single/so/brockett/: test_so_anisotropic_cmaes_brockett.cpp
tests/functional/single/so/geodesic/: test_so_anisotropic_cmaes_geodesic.cpp
tests/functional/single/so/rastrigin/: test_so_anisotropic_cmaes_rastrigin.cpp  test_so_isotropic_cbo_rastrigin.cpp
tests/functional/single/so/schwefel/: test_so_isotropic_cbo_schwefel.cpp
tests/functional/single/stiefel/ackley/: test_stiefel_isotropic_cbo_ackley.cpp
tests/unit/: test_math_basic.cpp
(+118 files in other folders)
